--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="main">
     <p><b>Sing up for free 700$</b></p>
-    <a href="https://go2affm.com/c/?p=19511&o=7460&s1=Faiju"><button>cleck here</button></a> <p>for sing up</p>
+    <a href="https://go2affm.com/c/?p=19511&o=7460&s1=Faiju"><button>click here</button></a> <p>for sing up</p>
   </div>
 </body>
 </html>
